# mavlink_raw_comm

./: .gitignore  README.md
.github/workflows/: cmake.yml
MavlinkRawComm/src/: Main.java
MavlinkRawComm/src/mavlink_encoder/: Checksum.java  MavlinkEncoder.java
MavlinkRawComm/src/status_text/: StatusTextEncoder.java  StatusTextPayloadEx.java
mavlink_raw_comm/: CMakeLists.txt  build_and_install.sh
mavlink_raw_comm/include/mavlink_encoder/: Digest.hpp  MavlinkEncoder.hpp  checksum.h
mavlink_raw_comm/include/status_text/: StatusTextEncoder.hpp
mavlink_raw_comm/src/: main.cpp
mavlink_raw_comm/src/mavlink_encoder/: MavlinkEncoder.cpp
mavlink_raw_comm/src/status_text/: StatusTextEncoder.cpp
mavlink_raw_comm/tests/: evaluation.hpp  trial_test.cpp
mavlink_raw_comm/tests/mavlink_encoder/: mavlink_encoder_test.cpp
mavlink_raw_comm/tests/status_text/: statustext_encoder_test.cpp
mavlink_sender/: CMakeLists.txt  build_and_install.sh
mavlink_sender/include/mavlink_encoder/: MavlinkEncoder.hpp
mavlink_sender/include/mavlink_sender/: MavlinkSender.hpp
mavlink_sender/include/status_text/: StatusTextEncoder.hpp
mavlink_sender/src/: main.cpp
mavlink_sender/src/mavlink_encoder/: MavlinkEncoder.cpp
mavlink_sender/src/mavlink_sender/: MavlinkSender.cpp
mavlink_sender/src/status_text/: StatusTextEncoder.cpp
